# powerpoint-notes-to-speech

./: .gitignore  README.md  clean_markdown.py  notes_export.py  pptx2mp3.sh  pyproject.toml  requirements.txt  tts_gtts_make_mp3.py
